feat: finished swagger docs
